# big_fix

./: .gitignore  CMakeLists.txt
src/backend/libraries/Classes/: CMakeLists.txt
src/backend/libraries/Classes/movie/: movies.h
src/backend/libraries/Classes/users/: user_and_dev.cpp  user_and_dev.h
src/backend/libraries/mysql-queries/: CMakeLists.txt  mysql-queries.cpp
src/qt/: CMakeLists.txt  backend.cpp  backend.h  collectiondialog.cpp  collectiondialog.h  collectionwindow.cpp  collectionwindow.h  genrewindow.cpp  genrewindow.h  main.cpp  mainwindow.cpp  mainwindow.h  moviedetailwindow.cpp  moviedetailwindow.h  movieswindow.cpp  movieswindow.h  moviewidget.cpp  moviewidget.h  searchwindow.cpp  searchwindow.h  signinwindow.cpp  signinwindow.h  signupwindow.cpp  signupwindow.h  userprofilewindow.cpp  userprofilewindow.h
src/qt/libraries/: CMakeLists.txt
src/qt/libraries/Classes/: CMakeLists.txt  movies.cpp
src/qt/libraries/Classes/logger/: logger.cpp  logger.h
src/qt/libraries/Classes/movie/: movies.cpp  movies.h
src/qt/libraries/Classes/users/: genders.cpp  genders.h  user_and_dev.cpp  user_and_dev.h
src/qt/libraries/mysql-queries/: CMakeLists.txt  mysql-queries.cpp  mysql-queries.h
